Fixed dark mode page load

--- a/styles.css
+++ b/styles.css
@@ -356,11 +356,14 @@ b{
 	============================
 */
 .dark-mode{
-	position: relative;
+	position: absolute;
 	width: 80px;
 	height: 30px;
 	border-radius: 20px;
+	top: 1%;
+	right: 5%;
 	background-color: var(--clr-bkg);
+	z-index: 20000;
 }
 .dark-mode span{
 	position: absolute;
@@ -374,11 +377,17 @@ b{
 	-webkit-transition: all 0.5s ease;
   	transition: all 0.5s ease;
 }
-@media only screen and (max-width: 600px){
+@media only screen and (max-width: 1300px){
 	.dark-mode{
-		margin: 10px;
+		right: 15%;
 	}
 }
+@media only screen and (max-width: 600px){
+	.dark-mode{
+		right: 25%;
+	}
+}
+
 
 /* 
 	==================
